--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.3",
     "@react-three/fiber": "^8.17.10",
+    "@supabase/supabase-js": "^2.47.8",
     "@tabler/icons-react": "^3.24.0",
     "@types/three": "^0.171.0",
     "class-variance-authority": "^0.7.1",
