--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.47.8",
     "@tabler/icons-react": "^3.24.0",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@types/three": "^0.171.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
